Rollable icon fix
Fixed an issue where in dark mode the rollable icon was invisible on hover (possible only on features tab?)

--- a/styles/dnd4eBeta-DarkMode.css
+++ b/styles/dnd4eBeta-DarkMode.css
@@ -15,14 +15,24 @@
    --color-text-dark-secondary:var(--color-text-light-primary);
    --color-text-dark-header:var(--color-text-light-heading);
 }
+input::-webkit-input-placeholder{
+	opacity:0.4;
+}
+input::-moz-placeholder{
+	opacity:0.4;
+}
+input:-ms-input-placeholder{
+	opacity:0.4;
+}
+input::-ms-input-placeholder{
+	opacity:0.4;
+}
 input::placeholder,.placeholder::after{
-	color:var(--color-text-light-primary);
 	opacity:0.4;
 }
 .chat-message,
 .window-app .window-content{
 	background-image:url('../icons/ui/parchment-dark.png');
-	color:var(--color-text-light-primary);
 }
 input,
 input[type="text"],input[type="number"],
@@ -56,7 +66,6 @@ button:disabled{
 }
 select,select[multiple],
 .multiselect .toggle{
-	color:var(--color-text-light-primary);
 	background:#49494b;
 }
 button{
@@ -70,7 +79,6 @@ form button{
 	background:var(--color-bg-btn-minor-inactive);
 }
 a:hover{
-	color:var(--color-text-light-highlight);
 }
 input[type="color"][data-edit]{
 	border:2px groove rgba(0,0,0,0.4);
@@ -90,7 +98,6 @@ input[type="color"][data-edit]{
 	color:var(--color-text-light-primary);
 }
 .chat-message .message-header{
-   color: var(--color-text-light-heading);
 }
 .directory .directory-header .header-search input{
 	background:rgba(255,255,255,0.05);
@@ -103,7 +110,6 @@ input[type="color"][data-edit]{
 	opacity:0.4;
 }
 form .notes,form .hint{
-   color:var(--color-text-light-heading);
 }
 #tours-management .tour .status{
 	color:var(--color-text-light-4);
@@ -112,7 +118,6 @@ form .notes,form .hint{
 	color:var(--color-text-light-6);
 }
 #permissions-config .hint{
-	color:var(--color-text-light-heading);
 }
 .dialog .dialog-buttons button,
 .dialog .dialog-buttons button.default{
@@ -175,11 +180,14 @@ img[src$="svg"].rollable:hover{
 }
 .dnd4eBeta.sheet .items-list .item .item-image.rollable:hover,
 .dnd4eBeta.sheet .items-list .item .rollable .item-image:hover{
-	background:url("/icons/svg/d20-white.svg") no-repeat;
 	background-size:contain;
+	-webkit-filter:brightness(255);
+	        filter:brightness(255);
+	
 }
 .dnd4eBeta.sheet .npc .sheet-header .automath img{
-	filter:unset;
+	-webkit-filter:unset;
+	        filter:unset;
 }
 .active-effect-sheet .effect-dot:not(:last-child),
 .active-effect-sheet .effect-status:not(:last-child),
